# igir

./: .gitignore  README.md  mkdocs.yml  plan.md  temp_actions.rs
.github/: copilot-instructions.md
docs/: hashing-parallelism.md
docs/advanced/: logging.md
docs/dats/: online-lookups.md  processing.md
docs/output/: tokens.md  writing-archives.md
docs/roms/: naming.md
rust/igir-rs/: Cargo.toml  FEATURE_PARITY.md  README-brief.md  TODO.md  igir_unknown_genres.json
rust/igir-rs/docs/input/: 7z-fallback.md
rust/igir-rs/src/: actions.rs  archives.rs  cache.rs  candidate_archive_hasher.rs  candidate_extension.rs  candidates.rs  checksum.rs  cli.rs  config.rs  dat.rs  game_console.rs  help_examples.md  igdb_platform_map.rs  lib.rs  main.rs  patch.rs  patch_apply.rs  progress.rs  records.rs  torrentzip.rs  torrentzip_zip64.rs  types.rs  utils.rs  write_candidate.rs
rust/igir-rs/src/roms/: chd.rs  mod.rs  rom_scanner.rs
rust/igir-rs/tests/: cache_only_hasheous.rs  candidates_parity.rs  dat_load_variants.rs  fallback_sources.rs  igdb_persistence.rs  integration_dat.rs  integration_zip.rs  online_lookup_failures.rs  online_lookup_mock.rs  patch_tests.rs  torrentzip_cp437.rs  torrentzip_cp437_nonascii.rs  torrentzip_deflate.rs  torrentzip_eocd_exact_crc.rs  torrentzip_large_pragmatic.rs  torrentzip_multi_deflate.rs  torrentzip_multi_file.rs  torrentzip_multi_records.rs  torrentzip_rvzstd.rs  torrentzip_zip64.rs  zip64_parity.rs
