[package]
name = "igir"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.18", features = ["derive"] }
globset = "0.4"
glob = "0.3"
regex = "1.11"
md-5 = "0.10"
pathdiff = "0.2"
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1_smol = "1.0"
sha2 = "0.10"
crc32fast = "1.4"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate", "zstd"] }
quick-xml = "0.36"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
which = "4.4"
chd = { version = "0.3", optional = true }
hex = "0.4"
tempfile = "3.6"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
rayon = "1.7"
num_cpus = "1.17"

[features]
# If enabled, integrate with an external CHD parsing crate or libchd binding.
# The crate is optional and included only when this feature is enabled.
libchd = ["chd"]
 
[dev-dependencies]
httpmock = "0.8"
